[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "Miraland release of Atomicals mining manager."
edition     = "2021"
homepage    = "https://hack.ink/atomicalsir"
license     = "GPL-3.0"
name        = "miratomicals-rac"
readme      = "README.md"
repository  = "https://github.com/miraland-labs/miratomicals"
version     = "0.2.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow              = { version = "1.0" }
atomicals-electrumx = { version = "0.2.0", path = "atomicals-electrumx" }
bitcoin             = { version = "0.31", features = ["rand-std"] }
ciborium            = { version = "0.2" }
clap                = { version = "4.4", features = ["color", "derive"] }
color-eyre          = { version = "0.6" }
num_cpus            = { version = "1.16" }
# rand                = { version = "0.8" }
reqwest             = { version = "0.11", features = ["json", "rustls-tls"] }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = { version = "1.0" }
tokio               = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing             = { version = "0.1" }
tracing-subscriber  = { version = "0.3" }

[dev-dependencies]
array-bytes = { version = "6.2" }

[workspace]
members = [
	"atomicals-electrumx",
]
